# pyProbabilityDistributionFit

./: .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
pdffit/: distfit.py  version.py
scripts/: blackisort  doc  install  installAndTest
search/: search_index.json
tests/: basetest.py  test_distfit.py
